--- a/civopAPI.yaml
+++ b/civopAPI.yaml
@@ -91,6 +91,8 @@ paths:
                    
         '500':
           description: Server error while processing the control task.
+        '400':
+          description: Bad request.
 
   /document/{documentId}/additionalDocument:
     post:
